# kdynaroll

./: Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.github/workflows/: build_and_test.yml
charts/kdynaroll/: Chart.yaml  values.yaml
charts/kdynaroll/templates/: _helpers.tpl  crd.yaml  deployment.yaml  role.yaml  service.yaml
examples/loadbalancer/: configmap.yaml  crd-config.yaml  deployment.yaml  ingress.yaml  service.yaml
src/: controller.rs  labeler.rs  lib.rs  main.rs  metrics.rs  task_runtime.rs
test_mocks/: Cargo.toml
test_mocks/src/: lib.rs
