[package]
name = "kdynaroll"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.93.1", default-features = false, features = ["client", "openssl-tls", "runtime","derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
kube-core = "0.93.1"


serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39.2", features = ["full"] }
schemars = "0.8.21"
kube-derive = "0.93.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
kube-runtime = "0.93.1"
anyhow = "1.0.93"
futures = "0.3.30"
hyper = {version="1.5",  features = ["full"]}
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
prometheus = "0.13"
lazy_static = "1.5"
axum = "0.7.8"

[dev-dependencies]
tower-test = "0.4"
test_mocks = {path = "test_mocks"}
http = "1.1.0"
kube-client = "0.93.1"
