[workspace]
[package]
name = "test_mocks"
edition = "2021"


[dependencies]
kube = { version = "0.93.1", default-features = false, features = ["client", "openssl-tls", "runtime","derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
tower-test = "0.4"
http = "1.1.0"
kube-client = "0.93.1"
tokio = { version = "1.39.2", features = ["full"] }
futures = "0.3.30"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
